--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: kjx63 # your name (or website title) here
 logo: "/images/profilePic.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Junior Web Developer
   <br><br>
-  Second description 
+  Start Learning Coding From April, 2019
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
